--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,116 @@ body{
     align-items: center;
 
 }
+.card-panel{
+    margin: 0;
+    padding: 0;
+}
+.board{
+    padding: 5px;
+    height: 50vmin;
+    width: 100vmin;
+    display:grid;
+    grid-gap: 2px;
+    grid-template-columns: repeat(4, 1fr 2fr) 1fr;
+    grid-template-rows: repeat(2, 1fr 2fr) 1fr;
+}
 
 .container {
     background: lightgray;
+}
+.house1{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1; 
+}
+.house2{
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+}
+.house3{
+    display: grid;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 1; 
+}
+.house4{
+    display: grid;
+    grid-column-start: 7;
+    grid-column-end: 8;
+    grid-row-start: 1; 
+}
+.house5{
+    display: grid;
+    grid-column-start: 9;
+    grid-column-end: 10;
+    grid-row-start: 1; 
+}
+.house6{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3; 
+}
+.house7{
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+}
+.house8{
+    display: grid;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 3; 
+}
+.house9{
+    display: grid;
+    grid-column-start: 7;
+    grid-column-end: 8;
+    grid-row-start: 3; 
+}
+.house10{
+    display: grid;
+    grid-column-start: 9;
+    grid-column-end: 10;
+    grid-row-start: 3; 
+}
+.house11{
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 5;
+}
+.house12{
+    display: grid;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 5; 
+}
+.house13{
+    display: grid;
+    grid-column-start: 7;
+    grid-column-end: 8;
+    grid-row-start: 5; 
+}
+.tile1{
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 2; 
+}
+.tile2{
+    display: grid;
+    grid-column-start: 6;
+    grid-column-end: 9;
+    grid-row-start: 2; 
+}
+.tile3{
+    display: grid;
+    grid-column-start: 4;
+    grid-column-end: 7;
+    grid-row-start: 4; 
 }
