combined boards into one demo

--- a/css/extra-board.css
+++ b/css/extra-board.css
@@ -4,7 +4,7 @@ body, html {
     font-family: 'Arial';
 }
 
-body{
+.game-container{
     display:grid;
     grid-template-rows: auto;
     justify-items: center;
