--- a/css/extra-board.css
+++ b/css/extra-board.css
@@ -5,6 +5,7 @@ body, html {
 }
 
 .game-container{
+    margin-top: 10vh;
     display:grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -32,6 +33,7 @@ body, html {
     width: 20vmax;
     justify-items: center;
     align-items: center;
+    
 }
 .title{
     padding-bottom: 10px;
@@ -61,6 +63,7 @@ body, html {
     grid-template-columns: repeat(10, 1fr 1fr 1fr 1fr 10fr) 1fr 1fr 1fr 1fr;
     grid-template-rows: repeat(5, 1fr 1fr 1fr 1fr 10fr) 1fr 1fr 1fr 1fr;
     z-index: 1;
+    
 }
 
 .tile{
