--- a/css/extra-board.css
+++ b/css/extra-board.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .game-container{
-    margin-top: 10vh;
+    margin-top: 10vmin;
     display:grid;
     grid-template-rows: auto;
     justify-items: center;
